--- a/src/app/src/main/res/values/strings.xml
+++ b/src/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">MoneyMate</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="prompt_select_month">Chọn tháng</string>
+    <string name="prompt_select_year">Chọn năm</string>
 </resources>
